# mimicker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  request_log_report.html  requirements.txt
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  docs.yml  publish.yml  quality.yml  test.yml
contrib/github-action/: action.yml  report-action.yml
contrib/gitlab-component/: template.yml
docs/: contributing.md  index.md
docs/ci-cd/: docker-compose.md  docker.md  github-actions.md  gitlab-ci.md  stub-coverage-reports.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: dynamic-responses.md  path-and-query-params.md  stubbing-guide.md
mimicker/: cli.py  config.py  handler.py  mimicker.py  rate_limit.py  regex.py  report_generator.py  request_log.py  route.py  sequence.py  server.py  stub_group.py  tracking.py
mockingbird/: handler.py  mockingbird.py  route.py  server.py  stub_group.py  stub_matcher.py
tests/: conftest.py  test_backward_compat.py  test_cli.py  test_config.py  test_health.py  test_logger.py  test_mimicker_delete.py  test_mimicker_get.py  test_mimicker_patch.py  test_mimicker_post.py  test_mimicker_put.py  test_mockingbird_delete.py  test_mockingbird_get.py  test_mockingbird_post.py  test_mockingbird_put.py  test_rate_limit.py  test_regex.py  test_report.py  test_route.py  test_sequence.py  test_server.py  test_stub_group.py  test_tracking.py
(+4 files in other folders)
