[tool.poetry]
name = "mimicker"
version = "2.2.3"
description = "A lightweight HTTP mocking server for Python"
authors = ["Amazia Gur <amaziagur@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["http", "mocking", "testing", "mock-server", "stubbing", "ci-cd", "http-server", "testing-tools", "stub-server", "purepython"]
repository = "https://github.com/mimickerhq/mimicker"
homepage = "https://github.com/mimickerhq/mimicker"

[tool.poetry.scripts]
mimicker = "mimicker.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^6.9.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
PyHamcrest = "^2.0"
requests = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "<5.0"
pre-commit = {version = ">=3.7,<5.0", python = ">=3.9,<4.0"}

[tool.poetry.group.docs.dependencies]
mkdocs-material = {version = "^9.5", python = ">=3.8,<4.0"}
pymdown-extensions = {version = "^10.7", python = ">=3.8,<4.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
